syntax = "proto3";
package metadata;

import "google/protobuf/wrappers.proto";

service MetadataService {
  rpc GetMetadatas(getMetadatasReq) returns (getMetadatasRes);
}

message getMetadatasReq {
  string userId = 1;
  int32 page = 2;
}

message Metadata {
  string id = 1;
  string userId = 2;
  repeated string files = 3;
}

message getMetadatasRes {
  repeated Metadata metadatas = 1;
}